--- a/SolutionWarriors/SolutionWarriors.UI/appsettings.json
+++ b/SolutionWarriors/SolutionWarriors.UI/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Azure": "Data Source=warriorsofintelligence.database.windows.net;Initial Catalog=warriorsofintelligence;User ID=joao.octavio.mantovani@warriorsofintelligence.database.windows.net;Password=@lice24143022;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "LocalDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SGDI;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  }
 }
